--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -34,12 +35,14 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
+        viewBinding true
         compose true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.2.0'
     }
     packagingOptions {
+        exclude 'META-INF/atomicfu.kotlin_module'
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
@@ -47,6 +50,9 @@ android {
 }
 
 dependencies {
+    implementation "androidx.room:room-ktx:2.5.0"
+    kapt "androidx.room:room-compiler:2.5.0"
+    androidTestImplementation "androidx.room:room-testing:2.5.0"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0"
     implementation "com.google.accompanist:accompanist-permissions:0.30.1"
     implementation 'androidx.core:core-ktx:1.7.0'
