--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 android {
     namespace 'space.tuleuov.bookreader'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "space.tuleuov.bookreader"
@@ -51,10 +51,12 @@ android {
 
 dependencies {
     implementation "androidx.room:room-ktx:2.5.0"
+    implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
     kapt "androidx.room:room-compiler:2.5.0"
     androidTestImplementation "androidx.room:room-testing:2.5.0"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0"
     implementation "com.google.accompanist:accompanist-permissions:0.30.1"
+    implementation "androidx.compose.foundation:foundation:1.5.4"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
