--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "space.tuleuov.bookreader"
-        minSdk 24
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -50,6 +50,13 @@ android {
 }
 
 dependencies {
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    kapt "com.google.dagger:hilt-android-compiler:2.38.1"
+
+// Для Hilt ViewModel
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
+
     implementation "androidx.room:room-ktx:2.5.0"
     implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
     kapt "androidx.room:room-compiler:2.5.0"
