--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     androidTestImplementation "androidx.room:room-testing:2.5.0"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0"
     implementation "com.google.accompanist:accompanist-permissions:0.30.1"
+    implementation "com.google.accompanist:accompanist-insets-ui:0.30.1"
+    implementation "com.google.accompanist:accompanist-insets:0.30.1"
     implementation "androidx.compose.foundation:foundation:1.5.4"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
