--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ android {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+
     implementation "io.coil-kt:coil-compose:1.3.0"
 
 
@@ -71,6 +73,8 @@ dependencies {
     implementation "androidx.compose.foundation:foundation:1.5.4"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "androidx.navigation:navigation-compose:2.5.0"
     implementation "androidx.compose.ui:ui:$compose_ui_version"
