--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,11 @@ android {
 }
 
 dependencies {
+    api 'androidx.activity:activity-ktx:1.2.0-alpha07'
+    api 'androidx.fragment:fragment-ktx:1.3.0-alpha07'
+    implementation 'androidx.activity:activity-ktx:1.7.2'
+    implementation 'androidx.fragment:fragment-ktx:1.6.0'
+
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
 
     implementation "io.coil-kt:coil-compose:1.3.0"
